@@ -1,8 +1,6 @@
 package com.jafarov.quiz.service;
 
-import com.jafarov.quiz.dto.topic.TopicEditDto;
-import com.jafarov.quiz.dto.topic.TopicInsertRequest;
-import com.jafarov.quiz.dto.topic.TopicUpdateRequest;
+import com.jafarov.quiz.dto.topic.*;
 import com.jafarov.quiz.entity.Topic;
 import com.jafarov.quiz.mapper.TopicMapper;
 import com.jafarov.quiz.repository.AnswerRepository;
@@ -11,11 +9,12 @@ import com.jafarov.quiz.repository.TopicRepository;
 import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.*;
+
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
+
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -46,62 +45,97 @@ class TopicServiceTest {
         );
     }
 
+    // ---------- save ----------
     @Test
     void testSave() {
         TopicInsertRequest request = new TopicInsertRequest();
         Topic topic = new Topic();
+
         when(topicMapper.toDboQuizTopicFromQuizTopicInsertRequest(request)).thenReturn(topic);
 
         topicService.save(request);
-        verify(topicRepository, times(1)).save(topic);
+
+        verify(topicRepository).save(topic);
     }
 
+    // ---------- getById ----------
     @Test
-    void testGetById_found() {
+    void testGetById_Found() {
         Topic topic = new Topic();
         TopicEditDto dto = new TopicEditDto();
+
         when(topicRepository.findById(1L)).thenReturn(Optional.of(topic));
         when(topicMapper.toDto(topic)).thenReturn(dto);
 
         TopicEditDto result = topicService.getById(1L);
-        assertNotNull(result);
         assertEquals(dto, result);
     }
 
     @Test
-    void testGetById_notFound() {
+    void testGetById_NotFound() {
         when(topicRepository.findById(1L)).thenReturn(Optional.empty());
-
-        assertThrows(EntityNotFoundException.class, () -> topicService.getById(1L));
+        assertThrows(EntityNotFoundException.class,
+                () -> topicService.getById(1L));
     }
 
+    // ---------- getAll(Pageable) ----------
     @Test
-    void testGetAll() {
-        Topic topic = new Topic();
-        Page<Topic> page = new PageImpl<>(Collections.singletonList(topic));
+    void testGetAll_Pageable() {
+        Page<Topic> page = new PageImpl<>(List.of(new Topic()));
         when(topicRepository.findAll(Pageable.unpaged())).thenReturn(page);
 
         Page<Topic> result = topicService.getAll(Pageable.unpaged());
-        assertNotNull(result);
         assertEquals(1, result.getTotalElements());
     }
 
+    // ---------- getAllTopics ----------
+    @Test
+    void testGetAllTopics() {
+        Page<TopicWithQuestionCountProjection> page =
+                new PageImpl<>(Collections.emptyList());
+
+        when(topicRepository.getAllTopicsWithQuestionsCount(Pageable.unpaged()))
+                .thenReturn(page);
+
+        Page<TopicWithQuestionCountProjection> result =
+                topicService.getAllTopics(Pageable.unpaged());
+
+        assertNotNull(result);
+    }
+
+    // ---------- searchTopicsWithQuestionCount ----------
+    @Test
+    void testSearchTopicsWithQuestionCount() {
+        when(topicRepository.searchByNameWithQuestionCount("java"))
+                .thenReturn(Collections.emptyList());
+
+        List<TopicWithQuestionCountProjection> result =
+                topicService.searchTopicsWithQuestionCount("java");
+
+        assertNotNull(result);
+    }
+
+    // ---------- update ----------
     @Test
     void testUpdate() {
         TopicUpdateRequest request = new TopicUpdateRequest();
         Topic topic = new Topic();
+
         when(topicMapper.toDboQuizTopicFromQuizTopicUpdateRequest(request)).thenReturn(topic);
 
         topicService.update(request);
-        verify(topicRepository, times(1)).save(topic);
+
+        verify(topicRepository).save(topic);
     }
 
+    // ---------- deleteById ----------
     @Test
     void testDeleteById() {
         topicService.deleteById(1L);
-        verify(topicRepository, times(1)).deleteById(1L);
+        verify(topicRepository).deleteById(1L);
     }
 
+    // ---------- findById ----------
     @Test
     void testFindById() {
         Topic topic = new Topic();
@@ -109,33 +143,72 @@ class TopicServiceTest {
 
         Optional<Topic> result = topicService.findById(1L);
         assertTrue(result.isPresent());
-        assertEquals(topic, result.get());
     }
 
+    // ---------- getAll(name, pageable) ----------
     @Test
-    void testGetAll_withName() {
-        Topic topic = new Topic();
-        Page<Topic> page = new PageImpl<>(Collections.singletonList(topic));
-        when(topicRepository.findByNameContainingIgnoreCase("math", Pageable.unpaged())).thenReturn(page);
+    void testGetAll_WithBlankName() {
+        Page<Topic> page = new PageImpl<>(List.of(new Topic()));
+        when(topicRepository.findAll(Pageable.unpaged())).thenReturn(page);
 
-        Page<Topic> result = topicService.getAll("math", Pageable.unpaged());
-        assertNotNull(result);
+        Page<Topic> result = topicService.getAll("", Pageable.unpaged());
         assertEquals(1, result.getTotalElements());
     }
 
     @Test
-    void testChangeStatus_deactivate() {
+    void testGetAll_WithName() {
+        Page<Topic> page = new PageImpl<>(List.of(new Topic()));
+        when(topicRepository.searchByNameOrParticipant("math", Pageable.unpaged()))
+                .thenReturn(page);
+
+        Page<Topic> result = topicService.getAll("math", Pageable.unpaged());
+        assertEquals(1, result.getTotalElements());
+    }
+
+    // ---------- changeStatus ----------
+    @Test
+    void testChangeStatus_Deactivate() {
         topicService.changeStatus(1L, false);
-        verify(topicRepository, times(1)).changeStatus(1L, false);
-        verify(questionRepository, times(1)).deactivateByTopicId(1L);
-        verify(answerRepository, times(1)).deactivateByTopicId(1L);
+
+        verify(topicRepository).changeStatus(1L, false);
+        verify(questionRepository).deactivateByTopicId(1L);
+        verify(answerRepository).deactivateByTopicId(1L);
     }
 
     @Test
-    void testChangeStatus_activate() {
+    void testChangeStatus_Activate() {
         topicService.changeStatus(1L, true);
-        verify(topicRepository, times(1)).changeStatus(1L, true);
+
+        verify(topicRepository).changeStatus(1L, true);
         verify(questionRepository, never()).deactivateByTopicId(anyLong());
         verify(answerRepository, never()).deactivateByTopicId(anyLong());
+    }
+
+    // ---------- getAllByParticipant ----------
+    @Test
+    void testGetAllByParticipant_WithoutName() {
+        Page<Topic> page = new PageImpl<>(List.of(new Topic()));
+
+        when(topicRepository.findByByParticipant(1L, Pageable.unpaged()))
+                .thenReturn(page);
+
+        Page<Topic> result =
+                topicService.getAllByParticipant(1L, "", Pageable.unpaged());
+
+        assertEquals(1, result.getTotalElements());
+    }
+
+    @Test
+    void testGetAllByParticipant_WithName() {
+        Page<Topic> page = new PageImpl<>(List.of(new Topic()));
+
+        when(topicRepository.findByByParticipantAndNameContainingIgnoreCase(
+                1L, "java", Pageable.unpaged()))
+                .thenReturn(page);
+
+        Page<Topic> result =
+                topicService.getAllByParticipant(1L, "java", Pageable.unpaged());
+
+        assertEquals(1, result.getTotalElements());
     }
 }
